--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/node": "^16.11.40",
     "@types/react": "^18.0.12",
     "@types/react-dom": "^18.0.5",
+    "date-fns": "^2.28.0",
     "i18next": "^21.8.9",
     "i18next-browser-languagedetector": "^6.1.4",
     "react": "^18.2.0",
